# Model-Viewer

./: .env  .gitignore  .mypy.ini  Makefile  REFACTORING_SUMMARY.md  context.md  pyproject.toml  system.md
src/model_view/: cli.py  main.py  physics_api.py
src/site/: index.html
src/static/: app.js  style.css
src/static/js/: app.js
src/static/js/modules/: loader.js  physics.js  scene.js  ui.js
