[project]
name = "model-view"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank1o3",email = "jahdy1o3@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13, <3.15"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy (>=1.20.0,<2.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.poetry.scripts]
dev = "model_view.cli:dev"
prod = "model_view.cli:prod"
